--- a/thesis.tex
+++ b/thesis.tex
@@ -57,12 +57,12 @@
 \authorWithDegrees{Michal Staněk} %jméno autora včetně současných akademických titulů
 \supervisor{Ing. Jan Kubr, Ph.D.}
 \acknowledgements{Chtěl bych poděkovat panu Ing. Janu Kubrovi, Ph.D. za odborné vedení mé práce, za pomoc a věcné rady při zpracování této práce.}
-\abstractCS{TODO}
-\abstractEN{TODO}
+\abstractCS{Tato práce psaná v programovacím jazyku Python se zabývá zabezpečeným stahováním html a js souborů webových stránek k doplňování cleansetu antivirového programu. Stahování souborů probíhá na bázi zachytávání komunikace internetového prohlížeče ovládaného nástrojem Selenium. K zachytávání je využit MitM klient Fiddler. Zabezpečení je realizováno obalením stahovacího procesu do virtuálního prostředí s využitím nástroje VirtualBox. Díky navrženému systému je možné zachytávat statisíce souborů týdně. Práce dále zkoumá možnosti navrženého systému pro využití v oblasti malware analýzy.}
+\abstractEN{Purpose of this thesis written in Python language is secure downloading of html and js files from websites for antivirus cleanset updating. Files downloading is implemented by capturing web traffic of internet browser controlled by Selenium. Traffic capturing is provided by MitM client Fiddler. For security, the whole process is wrapped in virtual environment provided by VirtualBox. Designed system is capable of capturing hundreds of thousands files a week. Furthermore, the thesis questions r options of using the system for malware analysis.}
 \placeForDeclarationOfAuthenticity{V~Praze}
 \declarationOfAuthenticityOption{4} %volba Prohlášení (číslo 1-6)
-\keywordsCS{Python, Virtualbox, Fiddler, html, js}
-\keywordsEN{Python, Virtualbox, Fiddler, html, js}
+\keywordsCS{Python, VirtualBox, Fiddler, html, js}
+\keywordsEN{Python, VirtualBox, Fiddler, html, js}
 % \website{http://site.example/thesis} %volitelná URL práce, objeví se v tiráži - úplně odstraňte, nemáte-li URL práce
 
 \renewcommand{\baselinestretch}{1.15}
